Update [Bài tập] Điều kiện-checkpoint.ipynb

--- a/[Bài tập] Điều kiện-checkpoint.ipynb
+++ b/[Bài tập] Điều kiện-checkpoint.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4a4734b7",
+   "id": "103691c1",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e9f055c8",
+   "id": "b50048c3",
    "metadata": {},
    "outputs": [
     {
@@ -60,8 +60,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "9042844f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập 1 số từ 1 đến 7: 6\n",
+      "Saturday\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Viết chương trình yêu cầu người dùng nhập một số trong phạm vi từ 1 đến 7. Sau đó hãy in ra ngày tương ứng: \n",
+    "\n",
+    "#1: Monday\n",
+    "\n",
+    "#2: Tuesday\n",
+    "\n",
+    "#3: Wednesday\n",
+    "\n",
+    "#4: Thursday\n",
+    "\n",
+    "#5: Friday\n",
+    "\n",
+    "#6: Saturday\n",
+    "\n",
+    "#7: Sunday\n",
+    "\n",
+    "#Nếu người dùng nhập số ngoài phạm vi từ 1 đến 7 thì hãy in ra “error, out of range”.\n",
+    "number=int(input(\"Nhập 1 số từ 1 đến 7: \"))\n",
+    "if number == 1:\n",
+    "    print(\"Monday\")\n",
+    "elif number ==2:\n",
+    "    print(\"Tuesday\")\n",
+    "elif number ==3:\n",
+    "    print(\"Wednesday\")\n",
+    "elif number ==4:\n",
+    "    print(\"Thursday\")\n",
+    "elif number ==5:\n",
+    "    print(\"Friday\")\n",
+    "elif number ==6:\n",
+    "    print(\"Saturday\")\n",
+    "else:\n",
+    "    print(\"error, out of range\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2e2a873e",
+   "id": "91819015",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -69,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddbf2b26",
+   "id": "186eacc4",
    "metadata": {},
    "outputs": [],
    "source": []
