Update [Bài tập] Điều kiện-checkpoint.ipynb

--- a/[Bài tập] Điều kiện-checkpoint.ipynb
+++ b/[Bài tập] Điều kiện-checkpoint.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "103691c1",
+   "id": "fb6c8d7d",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b50048c3",
+   "id": "8d285e83",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9042844f",
+   "id": "f224146b",
    "metadata": {},
    "outputs": [
     {
@@ -111,16 +111,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "91819015",
+   "execution_count": 19,
+   "id": "a7ee0d0e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nhập số tiền phải thanh toán: 190\n",
+      "Tổng số tiền phải thanh toán là: 140\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Viết chương trình hỏi người dùng đã chi bao nhiêu tiền tại cửa hàng.\n",
+    "\n",
+    "#Nếu họ chi ít hơn 75$, họ sẽ không được giảm giá.\n",
+    "\n",
+    "#Nếu họ chi 75$ trở lên, họ sẽ được giảm giá 15$.\n",
+    "\n",
+    "#Nếu người dùng chi từ 100$ trở lên, họ sẽ được giảm giá 25$.\n",
+    "\n",
+    "#Nếu người dùng chi từ 150$ trở lên, họ sẽ được giảm giá 50$.\n",
+    "#Sau đó in ra tổng số tiền mà người dùng phải thanh toán.\n",
+    "money=float(input(\"Nhập số tiền phải thanh toán: \"))\n",
+    "if money >= 75 and money < 100:\n",
+    "    print(f\"Tổng số tiền phải thanh toán là: {int(money)-15}\")\n",
+    "elif money >= 100 and money < 150:\n",
+    "          print(f\"Tổng số tiền phải thanh toán là: {int(money)-25}\")\n",
+    "elif money >= 150:\n",
+    "          print(f\"Tổng số tiền phải thanh toán là: {int(money)-50}\") \n",
+    "else:\n",
+    "    print(f\"Tổng số tiền phải thanh toánh là: {int(money)}\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "186eacc4",
+   "id": "420566d7",
    "metadata": {},
    "outputs": [],
    "source": []
